# Search-Engine

./: CMakeLists.txt  README.md  answers.json  main.cpp
include/: ConverterJSON.h  InvertedIndex.h  SearchServer.h
resources/: file001.txt  file003.txt  file004.txt
src/: CMakeLists.txt  ConverterJSON.cpp  InvertedIndex.cpp  SearchServer.cpp
tests/: CMakeLists.txt  test_InvertedIndex.cpp  test_SearchServer.cpp
